# decentralized-payload-transport

./: .gitignore  README.md  frames.gv
media/: lab-2d-map.pgm  test2.pgm
src/A-LOAM/: CMakeLists.txt
src/A-LOAM/launch/: aloam_velodyne_VLP_16.launch
src/A-LOAM/rviz_cfg/: aloam_velodyne.rviz
src/A-LOAM/src/: kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
src/jackal/jackal_control/config/: robot_localization.yaml
src/jackal/jackal_navigation/params/: costmap_common_params.yaml
src/jackal_hardware_configs/: CMakeLists.txt  package.xml
src/jackal_hardware_configs/launch/: rf2o.launch
src/jackal_sim/: CMakeLists.txt  package.xml
src/jackal_sim/config/: ds4.yaml
src/jackal_sim/launch/: teleop_control.launch
src/jackal_sim/map/: stage_one.yaml
src/jackal_sim/rviz/: rviz.rviz
src/jackal_sim/scripts/: APF-tests.ipynb  rrt.ipynb
src/jackal_sim/scripts/.ipynb_checkpoints/: control-checkpoint.ipynb  rrt-checkpoint.ipynb
src/jackal_sim/world/: stage_one.world
src/jackal_workspace/: CMakeLists.txt  README.md  package.xml
src/jackal_workspace/launch/: amcl.launch  gmapping.launch  laser_odom.launch  odometry_testing.launch  pallet.launch  simulation.launch  simulation1.launch  simulation2.launch
src/jackal_workspace/launch/exports/: navigation_without_payload.launch  single_robot_mapping.launch  single_robot_simulation.launch  three_robot_simulation.launch  two_robot_simulation.launch
src/jackal_workspace/map/: stage_four.pgm  stage_four.yaml  stage_three.yaml  stage_two.pgm  stage_two.yaml  test2.yaml  test3.pgm  test3.yaml
src/jackal_workspace/rviz/: odom_plot.rviz  rviz.rviz
src/jackal_workspace/scripts/: APF-tests.ipynb  Connector.py  GlobalPlanner.ipynb  GlobalPlanner.py  LocalPlanner.ipynb  LocalPlanner.py  Untitled.ipynb  connector.py  control.ipynb  odom_to_path.py  rrt.ipynb  straightline.py  test.ipynb
src/jackal_workspace/src/: pallet_feedback.cpp
src/jackal_workspace/urdf/: pallet.urdf.xacro  pallet1bar.urdf.xacro  pallet2bar.urdf.xacro  pallet3bar.urdf.xacro
src/jackal_workspace/world/: stage_one.world
src/lidar_object_detection/: CMakeLists.txt  README.md  package.xml
src/lidar_object_detection/cfg/: lidar_detection.cfg
src/lidar_object_detection/include/lidar_object_detection/: detection.h
src/lidar_object_detection/src/: detection.cpp  fitting.cpp
src/multi_jackal/multi_jackal_base/launch/: jackal_base.launch
src/multi_jackal/multi_jackal_control/config/: jackal_control_config.yaml
src/multi_jackal/multi_jackal_control/launch/: jackal_control.launch
src/multi_jackal/multi_jackal_description/urdf/: base_accessories.urdf.xacro  custom_accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
src/multi_jackal/multi_jackal_description/urdf/accessories/: bridge_plate.urdf.xacro  standoffs.urdf.xacro
src/multi_jackal/multi_jackal_description/urdf/configs/: sheffield_robots
src/multi_jackal/multi_jackal_nav/launch/: jackal_nav.launch
src/multi_jackal/multi_jackal_nav/params/: local_ekf.yaml
src/multi_jackal/multi_jackal_nav/params/odom_nav_params/: global_costmap_params.yaml
src/multi_jackal/multi_jackal_tutorials/launch/: one_jackal.launch
src/multi_jackal/multi_jackal_tutorials/rviz/: one_jackal.rviz
src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
src/shef04_jackal/: CMakeLists.txt  README.md  package.xml
src/shef04_jackal/urdf/: jackal_description.urdf.xacro
src/tracking_pid/cfg/: Pid.cfg
src/tracking_pid/test/tracking_pid/: test_tracking_pid.test
src/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
